# schoolcbb-v2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  asdf  docker-compose.yml  estado-progreso.md  flujo.md  nginx.conf  plan.md  plan_de_desarrollo_core_escolar_rust.md  plan_desarrollo_core_escolar_rust.md  plan_rrhh_asistencia_dt_2026.md  plan_rrhh_chile_2026.md  roadmap.md  rust-toolchain.toml  setup.sh
.agents/skills/audit/: .skill4agent.json
.agents/skills/cn/: README.md
.agents/skills/cn/1_6_Basico-1_basico-artes_visuales/: SKILL.md  kb.json
.agents/skills/cn/1_6_Basico-1_basico-ciencias_naturales/: SKILL.md  kb.json
.agents/skills/cn/1_6_Basico-1_basico-educacion_fisica_salud/: SKILL.md  kb.json
.agents/skills/cn/1_6_Basico-1_basico-historia_geografia_csociales/: SKILL.md  kb.json
.agents/skills/cn/1_6_Basico-1_basico-ingles/: SKILL.md  kb.json
.agents/skills/cn/1_6_Basico-1_basico-ingles_propuesta/: SKILL.md  kb.json
.agents/skills/cn/1_6_Basico-1_basico-lengua_cultura_pueblos_originarios/: SKILL.md  kb.json
.agents/skills/cn/1_6_Basico-1_basico-lenguaje_comunicacion/: SKILL.md  kb.json
.agents/skills/curriculo-chile/: SKILL.md  rebuild-kb.py
.agents/skills/performance/: .skill4agent.json
.agents/skills/rust-best-practices/: .skill4agent.json
.agents/skills/seo/: .skill4agent.json
.agents/skills/vercel-react-best-practices/: .skill4agent.json
.github/workflows/: ci.yml
migrations/: 20260508000001_initial_schema.sql
protos/: academic.proto  reporting.proto  workflow.proto
(+363 files in other folders)
