[workspace]
resolver = "2"
members = [
    "packages/common",
    "packages/proto",
    "packages/gateway",
    "packages/services/identity",
    "packages/services/sis",
    "packages/services/academic",
    "packages/services/attendance",
    "packages/services/notifications",
    "packages/services/finance",
    "packages/services/reporting",
    "packages/services/portal",
    "packages/services/curriculum",
    "packages/services/crm",
    "packages/frontend",
]

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false }
dotenvy = "0.15"
jsonwebtoken = "9"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tonic = "0.12"
prost = "0.13"
futures-util = "0.3"
